--- a/formularioGeneral.html
+++ b/formularioGeneral.html
@@ -12,8 +12,8 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-            <form action="sustitucionvocales.php" method="post" >
-                <p>Introduce una frase</p>
+            <form action="decimalbinario.php" method="post" >
+                <p>Introduce un número</p>
                 <input type="text" name="frase">
                
                 <input type="submit">
