--- a/practicasPHP/conversormoneda_1.html
+++ b/practicasPHP/conversormoneda_1.html
@@ -15,9 +15,9 @@ and open the template in the editor.
             <form action="conversormoneda_1.php" method="post">
                 <h2>Conversor de monedas</h2>
                 <p>Introduzca la moneda a cambiar 
-                    <select name="moneda1">
-                        <option value="euro">Euro</option>
-                        <option value="dolar" selected="selected">Dolar</option>
+                    <select name="divisa1">
+                        <option value="euro" selected="selected">Euro</option>
+                        <option value="dolar">Dolar</option>
                         <option value="yuan">Yuan</option>
                         <option value="libra">Libra</option>
                         <option value="rublo">Rublo</option>
@@ -25,7 +25,7 @@ and open the template in the editor.
                 </p>
                 <p>Introduzca la cantidad a cambiar <input type="text" name="cantidad"></p>
                 <p>Introduzca la moneda de cambio
-                    <select name="moneda2">
+                    <select name="divisa2">
                         <option value="euro">Euro</option>
                         <option value="dolar" selected="selected">Dolar</option>
                         <option value="yuan">Yuan</option>
