--- a/practicasPHP/calculaletradni_1.html
+++ b/practicasPHP/calculaletradni_1.html
@@ -6,14 +6,15 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Conversor de Euros a Dolares</title>
+        <title>Adivina si es Nif, Nie o nada de lo anterior</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div>
-            <form action="tabla10x10eq100_1.php" method="post">
-                <p>Mostrar tabla de 10 por 10 del 1 al 100</p>
+            <form action="calculaletradni_1.php" method="post">
+                <p>Introduce un número de dni, nie u otro</p>
+                <input type="text" name="dni" maxlength="8">
                 <input type="submit">
             </form>
         </div>
