--- a/ConexionesBD/ejer1/valida.html
+++ b/ConexionesBD/ejer1/valida.html
@@ -14,8 +14,8 @@ and open the template in the editor.
         <div>
             <form action="valida.php" method="post" >
                 <p>Introduce Usuario y Contraseña</p>
-                <input type="text" name="usuario">
-                <input type="text" name="password">
+                <p>Usuario: <input type="text" name="usuario"></p>
+                <p>Contraseña: <input type="text" name="password"></p>
                 <input type="submit">
                 
             </form>
